ansible/roles/manifests/templates/k3s/srscu-core-node-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "srscu-core-node-service"
spec:
  type: NodePort
  selector:
    component: "srscu"
  ports:
    - name: "core"
      protocol: "UDP"
      port: 2152
      targetPort: 2152
      nodePort: 2152
