ansible/roles/manifests/templates/k3s/srscu-f1u-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "srscu-f1u-service"
spec:
  type: ClusterIP
  selector:
    component: "srscu"
  ports:
    - name: "f1u"
      protocol: "UDP"
      port: 2152
      targetPort: 2153
