ansible/roles/manifests/templates/k3s/srsdu-f1ap-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "srsdu-f1ap-service"
spec:
  type: ClusterIP
  selector:
    component: "srsdu"
  ports:
    - name: "f1ap"
      protocol: "SCTP"
      port: 38472
      targetPort: 38472
