ansible/roles/manifests/templates/k3s/srsdu-f1u-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "srsdu-f1u-service"
spec:
  type: ClusterIP
  selector:
    component: "srsdu"
  ports:
    - name: "f1u"
      protocol: "UDP"
      port: 2152
      targetPort: 2152
