ansible/roles/manifests/templates/k3s/srscu-f1ap-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: srscu-f1ap-network-policy
spec:
  podSelector:
    matchLabels:
      component: srsdu
  ingress:
    - from:
        - podSelector:
            matchLabels:
              component: srscu
      ports:
        - protocol: SCTP
          port: 38472
