ansible/roles/manifests/templates/k3s/srsdu-f1u-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: srsdu-f1u-network-policy
spec:
  podSelector:
    matchLabels:
      app: srsdu
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: srscu
      ports:
        - protocol: UDP
          port: 2152
