ansible/roles/manifests/templates/k3s/srsdu-zmq-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: srsdu-zmq-network-policy
spec:
  podSelector:
    matchLabels:
      component: srsdu
  ingress:
    - ports:
        - protocol: TCP
          port: 2000
